[Feature #160479014] Fix body content overlapping header

--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -3,9 +3,10 @@ body {
 }
 
 .my-footer {
-    position: relative;
+    position: fixed;
     left: 0;
     bottom: 0;
+    background-color: #FAFAFA;
     width: 100%;
     color: #343434;
     text-align: center;
